<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@android:color/transparent">



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/shanbe"
        android:background="@drawable/bg_for_options_2"
        android:gravity="center"
        android:id="@+id/btn_Shanbe"
        android:layout_above="@id/btn_YekShanbe"
        android:layout_alignStart="@id/btn_ChaharShanbe"
        android:layout_alignEnd="@id/btn_ChaharShanbe"
        android:fontFamily="@font/mitra"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/yek_shanbe"
        android:background="@drawable/bg_for_options_2"
        android:gravity="center"
        android:id="@+id/btn_YekShanbe"
        android:layout_marginTop="7dp"
        android:layout_above="@id/btn_DoShanbe"
        android:layout_alignStart="@id/btn_ChaharShanbe"
        android:layout_alignEnd="@id/btn_ChaharShanbe"
        android:fontFamily="@font/mitra"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/do_shanbe"
        android:background="@drawable/bg_for_options_2"
        android:gravity="center"
        android:id="@+id/btn_DoShanbe"
        android:layout_marginTop="7dp"
        android:layout_above="@id/btn_SeShanbe"
        android:layout_alignStart="@id/btn_ChaharShanbe"
        android:layout_alignEnd="@id/btn_ChaharShanbe"
        android:fontFamily="@font/mitra"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/se_shanbe"
        android:background="@drawable/bg_for_options_2"
        android:gravity="center"
        android:id="@+id/btn_SeShanbe"
        android:layout_marginTop="7dp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@id/btn_ChaharShanbe"
        android:layout_alignEnd="@id/btn_ChaharShanbe"
        android:fontFamily="@font/mitra"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/chahar_shanbe"
        android:background="@drawable/bg_for_options_2"
        android:gravity="center"
        android:id="@+id/btn_ChaharShanbe"
        android:layout_marginTop="7dp"
        android:layout_below="@id/btn_SeShanbe"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/mitra"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/panj_shanbe"
        android:background="@drawable/bg_for_options_2"
        android:gravity="center"
        android:id="@+id/btn_PanjShanbe"
        android:layout_marginTop="7dp"
        android:layout_below="@id/btn_ChaharShanbe"
        android:layout_alignStart="@id/btn_ChaharShanbe"
        android:layout_alignEnd="@id/btn_ChaharShanbe"
        android:fontFamily="@font/mitra"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/jome"
        android:background="@drawable/bg_for_options_2"
        android:gravity="center"
        android:id="@+id/btn_Jome"
        android:layout_marginTop="7dp"
        android:layout_below="@id/btn_PanjShanbe"
        android:layout_alignStart="@id/btn_ChaharShanbe"
        android:layout_alignEnd="@id/btn_ChaharShanbe"
        android:fontFamily="@font/mitra"/>

</RelativeLayout>