<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:background="@drawable/bg_for_dialog"
    android:layoutDirection="ltr"
    android:paddingBottom="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Grey"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_zekr_finished"
        android:fontFamily="@font/mitra"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_zekr_finished"
        android:layout_marginTop="15dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/yes"
            android:textSize="15sp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/bg_for_confrim_grey"
            android:textColor="@color/white"
            android:id="@+id/btn_Confirm_dialog"
            android:gravity="center"
            android:fontFamily="@font/mitra"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/no"
            android:textSize="15sp"
            android:background="@drawable/bg_for_confrim_grey"
            android:textColor="@color/white"
            android:id="@+id/btn_Cancel_dialog"
            android:gravity="center"
            android:fontFamily="@font/mitra"/>
    </LinearLayout>

</RelativeLayout>